--- a/Automation.Wikipedia01/Automation.Wikipedia01.csproj
+++ b/Automation.Wikipedia01/Automation.Wikipedia01.csproj
@@ -45,9 +45,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assertions.cs" />
     <Compile Include="Base\BaseWebDriver.cs" />
     <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\EditPage.cs" />
+    <Compile Include="Pages\MainPage.cs" />
     <Compile Include="Pages\PrePage.cs" />
+    <Compile Include="Pages\SearchResultPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Test01.cs" />
   </ItemGroup>
